<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="2dp"
    app:cardCornerRadius="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/card1"
        app:layout_constraintEnd_toEndOf="@id/card1"
        app:layout_constraintStart_toStartOf="@id/card1"
        app:layout_constraintTop_toTopOf="@id/card1">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_gita" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="vertical"
            android:padding="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/sheriff_bounce"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="6"
                android:shadowRadius="1"
                android:text="@string/_2048"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sheriff_bounce"
                android:justificationMode="inter_word"
                android:letterSpacing="0.05"
                android:lineHeight="25dp"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="6"
                android:shadowRadius="1"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="UnusedAttribute" />


            <TextView
                style="@style/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="6"
                android:shadowRadius="1"
                android:text="@string/txt_end"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back_to_home_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_btn_res"
            android:fontFamily="@font/sheriff_bounce"
            android:text="OK"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>