<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list">

<!--    <com.github.matteobattilana.weather.WeatherView-->
<!--        android:id="@+id/weather_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_2048"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2048"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_level"
        app:layout_constraintEnd_toEndOf="@+id/frame_container"
        app:layout_constraintStart_toStartOf="@+id/frame_container"
        app:layout_constraintTop_toBottomOf="@+id/frame_container"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_level"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_2048"
        app:layout_constraintStart_toStartOf="@+id/tv_2048"
        app:layout_constraintTop_toBottomOf="@+id/tv_2048"
        tools:text="4x4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_score"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/view1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="2dp"
            android:background="#99000000"
            app:layout_constraintBottom_toTopOf="@id/tv_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_score"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view1"
            app:layout_constraintStart_toStartOf="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            tools:text="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_score"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toTopOf="@+id/frame_container"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="2dp"
            android:background="#99000000"
            app:layout_constraintBottom_toTopOf="@id/tv_best"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_best"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@id/view2"
            tools:text="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_container"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:id="@+id/container_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/result_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_container"
            android:clickable="false"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result"
                style="@style/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/game_over"
                android:textAllCaps="true"
                android:textSize="44sp" />
        </LinearLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_restart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_res"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/frame_container"
        app:layout_constraintEnd_toEndOf="@id/frame_container"
        app:layout_constraintStart_toStartOf="@id/frame_container"
        app:layout_constraintTop_toTopOf="@id/frame_container">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start again?"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_yes_restart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes_restart"
            android:layout_width="110dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_btn_no_restart"
            android:fontFamily="@font/sheriff_bounce"
            android:text="Yes"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/btn_no_restart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no_restart"
            android:layout_width="110dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_btn_yes_restart"
            android:fontFamily="@font/sheriff_bounce"
            android:text="No"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes_restart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_yes_restart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_res"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/bg_btn_res"
        android:src="@drawable/ic_res"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_home"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_btn_res"
        android:src="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/bg_btn_res"
        android:src="@drawable/ic_back"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/btn_res"
        app:layout_constraintTop_toTopOf="@+id/btn_res" />
</androidx.constraintlayout.widget.ConstraintLayout>